assets/css/custom.css
/* ... */
.posts-section-title {
    width: 100%;
    max-width: 1280px;
    padding: 0 2em;
}

.post-text {
    line-height: 1.2em;

}

.blog-image {
    max-height: 170px;
    display: block;
    margin-left: auto;
    margin-right: auto;
    max-width: 100%;
}

.tweet-text {
    line-height: 1.2em;
}

.tweet-action,
.medium-poster {
    color: #ababab;
    font-size: 0.9em;
}

#release-schedule-svg {
    width: 100%;
    padding-right: 3em;
    padding-top: 1em;
}

.api-tag,
.lib-tag {
    font-size: 0.5em;
    border: 1.5px solid #c7a1f5;
    padding: 0.3em 0.4em;
    border-radius: 0.8em;
    font-weight: 600;
    position: absolute;
    margin-left: 1em;
}

.container-logo-flex {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    width: 100%;
    max-width: 1280px;
    margin: 0 auto;
}

.logo-flex {
    margin: 0 1.5em;
}

.logo-flex a img {
    max-width: 120px;
}

.projects-logo {
    position: relative;
    left: 50%;
    width: 300px;
    transform: translate(-50%)
}

.projects-logo-bsql {
    position: relative;
    left: 50%;
    width: 400px;
    transform: translate(-50%)
}

.blazingsql-icon {
    text-align: center;
    width: 100%;
    font-size: 5em;
    padding-top: 0.2em;
    color: #9944ff;
    text-shadow: 1px 1px 2px #521798;
}
.image-blazingsql-benefits{
    position: relative;
    left: 50%;
    max-width: 320px;
    transform: translate(-50%)
}

/* footer */
.footer-cta-main {
    color: white;
    background: #7400ff;
    text-align: center;
    margin-top: 0;
    margin-bottom: 0;
    padding-top: 4em;
    padding-bottom: 4em;
}

.footer-cta-main h2 {
    color: white;
    margin-bottom: 1em;
}

footer {
    background: url(../images/footer-bg.png) top center no-repeat;
    padding-top: 4em;
    padding-bottom: 3em;
    text-align: center;
}

.footer-nav ul {
    list-style: none;
    padding-left: 0;
}


.footer-nav ul li a {
    color: #7400ff;
    text-transform: uppercase;
}

.footer-logo {
    margin: 0 auto;
}

.footer-icon {
    font-size: 0.8em;
    margin-left: 0.8em;
    margin-right: 0.8em;
}

.copy-date {
    color: #a492c1;
    width: 100%;
    text-align: center;
}

.footer-help-section {
    color: white;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    width: 100%;
    max-width: 1280px;
    margin: 0 auto;
    padding-top: 3em;
    padding-bottom: 6em;
}

.footer-help-box {
    margin: 1em 1.5em;
}

.footer-help-box .icon {
    display: block;
    margin: 0 auto;
    padding-bottom: 0.3em;
    text-align: center;
}


/* buttons */
a.blue-btn,
.primary-btn {
    cursor: pointer;
    background: #36c9dd;
    color: #FFF;
    display: inline-block;
    font-weight: 600;
    font-size: 18px;
    line-height: 22px;
    padding: 14px 20px;
    border-radius: 100px;
    -webkit-transition: all 0.3s ease-in-out;
    -moz-transition: all 0.3s ease-in-out;
    -o-transition: all 0.3s ease-in-out;
    transition: all 0.3s ease-in-out;
}

a.blue-btn:hover,
.primary-btn:hover {
    background: #a785e7;
    -webkit-transition: all 0.3s ease-in-out;
    -moz-transition: all 0.3s ease-in-out;
    -o-transition: all 0.3s ease-in-out;
    transition: all 0.3s ease-in-out;
    color: #fff;

}

/* install options selector */
/* new selector */

.selector {
    width: 100%;
}

.selector .options div {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
}

.selector .options .option-label {
    color: white;
    width: 6em;
    text-transform: uppercase;
    font-weight: 600;
    margin-top: 0.6em;
}

.selector .options .option {
    background: #e3e3e3;
    color: #3c3c3c;
    flex: 1 1;
    margin: 0.2em;
    padding: 0.3em;
    cursor: pointer;
    line-height: 1.5em;
}

.selector .options .option-blank {
    color: white;
    flex: 1 1;
    margin: 0.2em;
    padding: 0.3em;
    cursor: none;
    line-height: 1.5em;
}

.selector .options .option-blank span {
    margin: auto;
}

i.fa-up-6 {
    position: relative;
    top: -6px;
}

i.fa-down-6 {
    position: relative;
    top: 6px;
}

.selector .options .option .svg-inline--fa {
    margin-top: 0.2em;
    padding-left: 0.3em;
}

.selector .options .active {
    background: #36c9dd;
    font-weight: 600;
    color: #424242;
}

.selector .options .active.advanced {
    background: #ffb500;
    font-weight: 600;
    color: #424242;
}

.selector .options .disabled {
    background: #a785e7;
    color: #706880;
    cursor: not-allowed;
}

.cmd {
    display: flex;
}

.cmd-label {
    color: white;
    width: 6em;
    text-transform: uppercase;
    font-weight: 600;
    margin-top: 2em;
}

.cmd-box {
    cursor: text;
    overflow: auto;
    width: calc(100% - 6em);
}

.hidden {
    display: none;
}

.noselect,
div.option,
.primary-btn,
a.blue-btn,
.primary-btn {
    -webkit-touch-callout: none;
    /* iOS Safari */
    -webkit-user-select: none;
    /* Safari */
    -khtml-user-select: none;
    /* Konqueror HTML */
    -moz-user-select: none;
    /* Firefox */
    -ms-user-select: none;
    /* Internet Explorer/Edge */
    user-select: none;
    /* Non-prefixed version, currently supported by Chrome and Opera */
}

.selector-buttons {
    text-align: center;
    margin-top: 1em;
}

.selector .context {
    display: none;
}

.selector .option.active .fas {
    color: #3c3c3c;
}

/* blog posts */
.blog-container h1, .posts-container h1 {
    margin-bottom: 0.1em;
    padding-top: 0.5em;
    border-top: 2px solid #7306ff;
}

.blog-preview-item {
    margin-top: 1em;
    margin-bottom: 3em;
    vertical-align: top;
    width: 32%;
    display: inline-block;
}

.blog-preview-item h1 {
    font-size: 1.6em;
}

.blog-preview-item:nth-child(1n+0) {
    padding-right: 1em;
}

.blog-preview-item:nth-child(2n+0) {
    padding-left: 1em;
    padding-right: 1em;
}

.blog-preview-item:nth-child(3n+0) {
    padding-right: 0em;
}
/* ... */

